[gd_scene load_steps=7 format=3 uid="uid://cdg1pus5i5p5b"]

[ext_resource type="Script" path="res://scripts/audio_player.gd" id="1_o6gaf"]
[ext_resource type="AudioStream" uid="uid://r58wdfiwyv7q" path="res://assets/sounds/jump.wav" id="2_bmuho"]
[ext_resource type="AudioStream" uid="uid://drtaaaolkg5nd" path="res://assets/sounds/overworld_1.wav" id="2_f34v4"]
[ext_resource type="AudioStream" uid="uid://brmw5m7qsfb5r" path="res://assets/sounds/stomp.wav" id="3_5parf"]
[ext_resource type="AudioStream" uid="uid://dnc2b5w0t68pi" path="res://assets/sounds/mario_die.mp3" id="5_urvg3"]
[ext_resource type="AudioStream" uid="uid://b4jfop75il0ik" path="res://assets/sounds/enemy_hit_by.wav" id="5_ysumi"]

[node name="Node" type="Node"]
script = ExtResource("1_o6gaf")

[node name="backgroundStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_f34v4")
bus = &"Music"

[node name="sfx" type="Node" parent="."]

[node name="AudioStreamPlayer_jumping" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("2_bmuho")
bus = &"SFX"

[node name="AudioStreamPlayer_stomp" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("3_5parf")
volume_db = 5.622
bus = &"SFX"

[node name="AudioStreamPlayer_mario_die" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("5_urvg3")

[node name="AudioStreamPlayer_enemy_die_from_hit" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("5_ysumi")
